<resources>
    <string name="app_name">Singurim</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome</string>
    <string name="nav_header_subtitle">Choose action</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
<string name="Welcem">Welcome \n
If you are already subscribed to Singurim enter the email and click: Login \n
If you have not yet earned the honor, click Create New User and enter your email account
        </string>
    <string name="WAITING">your packages in the warehouse</string>
    <string name="AllWAITING">All packages in the warehouse</string>
    <string name="RECIVED">your package that recived</string>
    <string name="ONWAY">your package that on way</string>
    <string name="WAITINGBEFORTAKING">your package that waiting for taking</string>

    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
