<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ALLWAITING"
            android:title="@string/AllWAITING" />

        <item
            android:id="@+id/nav_WAITING"
            android:title="@string/WAITING" />
        <item
            android:id="@+id/nav_WAITINGBEFORTAKING"
            android:title="@string/WAITINGBEFORTAKING" />
        <item
            android:id="@+id/nav_ONWAY"
            android:title="@string/ONWAY" />
        <item
            android:id="@+id/nav_RECIVED"
            android:title="@string/RECIVED" />


    </group>
<!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>
-->
</menu>
