<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_ALLWAITING">

    <fragment
        android:id="@+id/nav_ALLWAITING"
        android:name="com.example.secondapp2n_0.ui.AllWaiting.AllWaitingFragment"
        android:label="@string/AllWAITING"
        tools:layout="@layout/all_waiting"
        />

    <fragment
        android:id="@+id/nav_WAITING"
        android:name="com.example.secondapp2n_0.ui.Waiting.WaitingFragment"
        android:label="@string/WAITING"
        tools:layout="@layout/waiting"/>
    <fragment
        android:id="@+id/nav_WAITINGBEFORTAKING"
        android:name="com.example.secondapp2n_0.ui.WaitingForTaking.WaitingForTakingFragment"
        android:label="@string/WAITINGBEFORTAKING"
        tools:layout="@layout/waiting_for_taking"/>
    <fragment
        android:id="@+id/nav_ONWAY"
        android:name="com.example.secondapp2n_0.ui.OnWay.OnWayfragment"
        android:label="@string/ONWAY"
        tools:layout="@layout/on_way"/>
    <fragment
        android:id="@+id/nav_RECIVED"
        android:name="com.example.secondapp2n_0.ui.Recived.RecivedFragment"
        android:label="@string/RECIVED"
        tools:layout="@layout/recied"/>
</navigation>
        <!--tools:layout="@layout/fragment_gallery"-->
    <!--
        <fragment
            android:id="@+id/nav_slideshow"
            android:name="com.example.secondapp2n_0.ui.slideshow.SlideshowFragment"
            android:label="@string/menu_slideshow"
            tools:layout="@layout/fragment_slideshow" />

        <fragment
            android:id="@+id/nav_tools"
            android:name="com.example.secondapp2n_0.ui.tools.ToolsFragment"
            android:label="@string/menu_tools"
            tools:layout="@layout/fragment_tools" />

        <fragment
            android:id="@+id/nav_share"
            android:name="com.example.secondapp2n_0.ui.share.ShareFragment"
            android:label="@string/menu_share"
            tools:layout="@layout/fragment_share" />

        <fragment
            android:id="@+id/nav_send"
            android:name="com.example.secondapp2n_0.ui.send.SendFragment"
            android:label="@string/menu_send"
            tools:layout="@layout/fragment_send" />-->
